Fixes github box vertical alignment

--- a/src/styles/_guide.scss
+++ b/src/styles/_guide.scss
@@ -34,17 +34,19 @@
 }
 
 .docs-content .guide-github-text {
+	align-items: center;
 	background: rgba($primary, .05);
 	border-radius: 0 4px 4px 0;
 	color: rgba($primary, .6);
+	display: flex;
 	font-size: 16px;
 	height: 96px;
 	margin-left: 96px;
-	padding-left: 20px;
+	padding: 0 20px;
 }
 
 .docs-content .guide-github-text p {
-	line-height: 96px;
+	margin: 0;
 }
 
 .docs-content .guide-github-link {
